# Intrudex

./: .dockerignore  .gitignore  .gitmodules  404.html  Dockerfile  Dockerfile.prod  Intrudex-Client-installer.iss  Intrudex.html  LICENSE  README.md  ReadMe.md  about.html  contact.html  docker-compose.yml  index.html  mkdocs.yml  overview.html  sitemap.xml  why-intrudex.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Build-Docker-Dev-image.yaml  Build-Docker-Prod-image.yaml  Build-Intrudex-Client.yaml  deploy.yml
Client/src/: main.cpp
Intrudex-Client/: CMakeLists.txt  version.rc
Intrudex-Client/assets/: IntrudexSigma.mc
Intrudex-Client/config/: client_config.json  server_config.json  sigma_config.json  sysmonconfig-export.xml
Intrudex-Client/header/: ApplicationHttpSender.h  ApplicationLogCollector.h  HttpClient.h  SecurityHttpSender.h  SecurityLogCollector.h  SigmaEventLogInstaller.h  SigmaLogCollector.h  SigmaManager.h  SysmonCollector.h  SystemHttpSender.h  SystemLogCollector.h  sysmon_manager.h  utils.h
Intrudex-Client/includes/: pugiconfig.hpp  pugixml.hpp
Intrudex-Client/src/: ApplicationHttpSender.cpp  ApplicationLogCollector.cpp  HttpClient.cpp  SecurityHttpSender.cpp  SecurityLogCollector.cpp  SigmaEventLogInstaller.cpp  SigmaLogCollector.cpp  SigmaManager.cpp  SysmonCollector.cpp  SystemHttpSender.cpp  SystemLogCollector.cpp  main.cpp  sysmon_manager.cpp  utils.cpp
Intrudex-Server/: init_db.py  nginx.conf  package-lock.json  package.json  requirements.txt  run.py  sample.env
Intrudex-Server/app/: __init__.py
Intrudex-Server/app/models/: auth.py  logs.py
Intrudex-Server/app/routes/: auth.py  errors.py  logs.py  main.py  sigma.py  sigmarules.py  sigmarules_api.py  similar_rules.py  view.py
Intrudex-Server/app/static/: style.css
Intrudex-Server/app/static/css/: input.css
Intrudex-Server/app/static/js/: dashboard.js  rule-details.js  script.js  sigma.js  view_full.js
Intrudex-Server/app/templates/: 403.html  404.html  500.html  base.html  index.html  login.html
Intrudex-Server/app/templates/sigma/: index.html  rules.html  settings.html  view.html
Intrudex-Server/app/templates/sigmarules/: details.html  event_details.html  flagged_event_detail.html  flagged_events.html  index.html  rule_details.html  rule_details_skeleton.html  run.html
Intrudex-Server/app/templates/sigmarules/partials/: event_list.html
Intrudex-Server/app/templates/view/: index.html  index_with_table.html  log_table.html
Intrudex-Server/app/utils/: rule_quality.py  sigma_loader.py
Server/: app.py
Server/templates/: baseoff.html  index.html
assets/javascripts/: bundle.56ea9cef.min.js
assets/js/: mermaid-config.js
builder/: README.md  requirements.txt
builder/Client/: Intrudex-Client-Builder.py  version.txt
builder/Server/: version.txt
docs/: Intrudex.md  about.md  contact.md  index.md  why-intrudex.md
docs/assets/css/: styles.css
docs/assets/fonts.googleapis.com/: css.622a93ca.css
docs/assets/js/: script.js
docs/installation/: index.md
docs/installation/client/: index.md  windows-installer.md  windows-portable.md  windows-source.md
docs/installation/server/: development.md  docker-dev.md  docker-prod.md  index.md  production.md
installation/: index.html
installation/client/: index.html  windows-installer.html  windows-portable.html  windows-source.html
installation/server/: development.html  docker-dev.html  docker-prod.html  index.html  production.html
search/: search_index.js  search_index.json
